# shuru

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  justfile
.claude/skills/blueprint-ui/: SKILL.md
.github/workflows/: deploy-www.yml  release.yml
crates/shuru-cli/: Cargo.toml
crates/shuru-cli/src/: assets.rs  checkpoint.rs  cli.rs  config.rs  main.rs  vm.rs
crates/shuru-darwin/: Cargo.toml
crates/shuru-darwin/src/: bootloader.rs  configuration.rs  directory_sharing.rs  entropy.rs  error.rs  lib.rs  memory.rs  network.rs  serial.rs  socket.rs  storage.rs  terminal.rs  vm.rs
crates/shuru-darwin/src/sys/: queue.rs  virtualization.rs
crates/shuru-darwin/src/sys/virtualization/: vz_configuration.rs  vz_directory_sharing.rs  vz_runtime.rs  vz_storage_attachments.rs
crates/shuru-guest/: Cargo.toml
crates/shuru-guest/src/: main.rs
crates/shuru-vm/: Cargo.toml
crates/shuru-vm/src/: lib.rs  proto.rs  sandbox.rs
crates/shuru-vz/: Cargo.toml
crates/shuru-vz/src/: configuration.rs  lib.rs  runtime.rs  socket.rs
crates/shuru-vz/src/sys/virtualization/: vz_configuration.rs  vz_socket.rs
scripts/: prepare-rootfs-debian.sh  prepare-rootfs.sh
www/: astro.config.mjs  package.json
www/public/: CNAME
www/src/components/landing/: CliSection.astro  FeaturesSection.astro  Footer.astro  GetStartedSection.astro  HeroSection.astro  Nav.astro  UseCasesSection.astro
www/src/layouts/: Layout.astro
www/src/pages/: index.astro
www/src/styles/: global.css
