[package]
name = "shuru-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shuru"
path = "src/main.rs"

[dependencies]
shuru-vz = { path = "../shuru-vz" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
