[package]
name = "shuru-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shuru"
path = "src/main.rs"

[dependencies]
shuru-vm = { path = "../shuru-vm" }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "3", features = ["json"] }
